# lglint

./: .gitignore  CONTRIBUTING.md  README.md  README.rst  config.json.sample  config.py  main.py  pyproject.toml
bash/: convert.sh
lglint/: filters.py  transformers.py
notebooks/: CRF_NER_akhilesh.ipynb  Untitled.ipynb  Untitled1.ipynb  bihar.tar.tz  clubbing_things.ipynb  get_unique_judges.ipynb  processing.ipynb
notebooks/.ipynb_checkpoints/: CRF_NER-checkpoint.ipynb  converting_multiline_to_single_line-checkpoint.ipynb  crf_ner-checkpoint.ipynb  processing-checkpoint.ipynb
scripts/: ConcatenateMetadataOfState.py  Constants.py  CopyFilteredJudgements.py  FilterByCaseType.py  SampleNCases.py  add_title_geo_and_CNR_to_first_line.py  concatenate_metadata_of_state.py  convert_to_cheyyali_format.py  converter.py  copy_filtered_judgements.py  filter_by_case_type.py  filter_by_cnr.py  find_pattern_in_judgements.py  get_cnr_from_file_name.py  haq_sample_by_CNR.py  load_meta_data.py  main.py  pdf2txt.py  pdf_to_txt.py  pipeline.py  sample_n_cases.py  task.py  util.py
scripts/haq/: convert_target_judgements.py  haq_sample_by_CNR.py
tests/: test_lglint.py
