[tool.poetry]
name = "lglint"
version = "0.1.0"
description = "interpretation of legal documents"
authors = ["Samantar <samantar@civicdatalab.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
pdftotext = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
